[FIX] point_of_sale: fix css for cash in/out popup
Current behavior:
When the text for the button in the cash in/out popup is too long, the
first number of the amount is hidden behind the currency symbol.

Steps to reproduce:
- Install l10n_bo and PoS
- Switch language to Spanish
- Create and open a PoS with a cash payment method
- Open the cash in/out popup, enter a value.
- The first number of the amount is hidden behind the currency symbol.

opw-3324406

--- a/addons/point_of_sale/static/src/app/navbar/cash_move_popup/cash_move_popup.scss
+++ b/addons/point_of_sale/static/src/app/navbar/cash_move_popup/cash_move_popup.scss
@@ -55,7 +55,6 @@
             left: 10px;
             top: 10px;
             background-color: #fff;
-            padding-right: 8px;
         }
     }
 
