--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -2653,6 +2653,7 @@ td {
     font-size: 20px;
     color: #444;
     padding: 10px;
+    padding-left: 17px;
     border-radius: 3px;
     border: none;
     box-shadow: 0px 0px 0px 1px rgb(220,220,220) inset;
